fix(web): correct spacing of problem section on small displays

--- a/app/web/static/web/styles/pages/landing.css
+++ b/app/web/static/web/styles/pages/landing.css
@@ -173,6 +173,9 @@ Landing page only styles.
   .desktop-break {
     display: none;
   }
+  .problem {
+    margin-top: 40px;
+  }
 }
 
 /* Louise's story */
